--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,7 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  server:
+    enableSelfPreservation: false
 server:
   port: 8761
